--- a/stylemeeting.css
+++ b/stylemeeting.css
@@ -23,15 +23,15 @@
       z-index: -1;
     }
 
-    .container {
-      background-color: rgba(255, 255, 255, 0.95);
-      padding: 30px 40px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 500px;
-      margin: 40px auto;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      text-align: right;
+   .container {
+     background-color: rgba(255, 255, 255, 0.95);
+     padding: 2rem;
+     border-radius: 12px;
+     width: 90%;
+     max-width: 500px;
+     margin: 5vh auto;
+     box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+     text-align: right;
     }
 
     h2 {
@@ -112,5 +112,5 @@
       font-size: 11px;
       color: #aaa;
       margin-top: 3px;
-
     }
+   
